[package]
name = "network"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem network"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
bytes = { version = "0.5.6", features = ["serde"] }
futures = "0.3.8"
futures-util = "0.3.8"
hex = "0.4.2"
once_cell = "1.4.1"
pin-project = "1.0.2"
proptest = { version = "0.10.1", default-features = true, optional = true }
proptest-derive = { version = "0.2.0", optional = true }
rand = { version = "0.7.3", features = ["small_rng"] }
rand_core = { version = "0.5.1", optional = true }
serde = { version = "1.0.117", default-features = false }
serde_bytes = "0.11.5"
thiserror = "1.0.22"
tokio = { version = "0.2.22", features = ["full"] }
tokio-retry = "0.2.0"
tokio-util = { version = "0.3.1", features = ["codec"] }

bitvec = { path = "../common/bitvec", version = "0.1.0", package = "diem-bitvec" }
channel = { path = "../common/channel", version = "0.1.0" }
bcs = "0.1.2"
diem-config = { path = "../config", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-metrics = { path = "../common/metrics", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }
diem-types = { path = "../types", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
memsocket = { path = "../network/memsocket", version = "0.1.0", optional = true }
netcore = { path = "../network/netcore", version = "0.1.0" }
num-variants = { path = "../common/num-variants", version = "0.1.0" }
short-hex-str = { path = "../common/short-hex-str", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3.3"
diem-network-address = { path = "../network/network-address", version = "0.1.0", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0" }
memsocket = { path = "../network/memsocket", version = "0.1.0" }
network-builder = {path = "../network/builder", version = "0.1.0"}
proptest = { version = "0.10.1", default-features = true }
proptest-derive = { version = "0.2.0" }
rand_core = { version = "0.5.1" }
serial_test = "0.5.1"
socket-bench-server = { path = "../network/socket-bench-server", version = "0.1.0" }

[features]
default = []
fuzzing = ["bitvec/fuzzing", "diem-proptest-helpers", "diem-types/fuzzing", "diem-network-address/fuzzing", "diem-crypto/fuzzing", "memsocket/testing", "netcore/fuzzing", "proptest", "proptest-derive", "rand_core"]
testing = ["diem-config/testing", "memsocket/testing", "netcore/testing"]

[[bench]]
name = "socket_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
