[package]
name = "network"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem network"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytes = { version = "1.0.1", features = ["serde"] }
futures = "0.3.12"
futures-util = "0.3.12"
hex = "0.4.2"
once_cell = "1.7.2"
pin-project = "1.0.5"
proptest = { version = "1.0.0", default-features = true, optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = { version = "0.8.3", features = ["small_rng"] }
rand_core = { version = "0.6.2", optional = true }
serde = { version = "1.0.123", default-features = false }
serde_bytes = "0.11.5"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-retry = "0.2.0"
tokio-stream = "0.1.3"
tokio-util = { version = "0.6.3", features = ["compat", "codec"] }

bitvec = { path = "../common/bitvec", package = "diem-bitvec" }
channel = { path = "../common/channel" }
bcs = "0.1.2"
diem-config = { path = "../config" }
diem-crypto = { path = "../crypto/crypto" }
diem-crypto-derive = { path = "../crypto/crypto-derive" }
diem-infallible = { path = "../common/infallible" }
diem-logger = { path = "../common/logger" }
diem-metrics = { path = "../common/metrics" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-rate-limiter = { path = "../common/rate-limiter"}
diem-time-service = { path = "../common/time-service", features = ["async"] }
diem-types = { path = "../types" }
diem-workspace-hack = { path = "../common/workspace-hack" }
memsocket = { path = "./memsocket", optional = true }
netcore = { path = "./netcore" }
num-variants = { path = "../common/num-variants" }
short-hex-str = { path = "../common/short-hex-str" }

[dev-dependencies]
criterion = "0.3.4"
diem-proptest-helpers = { path = "../common/proptest-helpers" }
diem-types = { path = "../types", features = ["fuzzing"] }
maplit = "1.0.2"
memsocket = { path = "./memsocket" }
network-builder = {path = "./builder"}
proptest = { version = "1.0.0", default-features = true }
proptest-derive = { version = "0.3.0" }
rand_core = "0.6.2"
serial_test = "0.5.1"
socket-bench-server = { path = "./socket-bench-server" }

[features]
default = []
fuzzing = ["bitvec/fuzzing", "diem-crypto/fuzzing", "diem-types/fuzzing", "diem-proptest-helpers", "diem-time-service/testing", "diem-types/fuzzing", "memsocket/testing", "netcore/fuzzing", "proptest", "proptest-derive", "rand_core"]
testing = ["diem-config/testing", "diem-time-service/testing", "memsocket/testing", "netcore/testing"]

[[bench]]
name = "socket_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
