[package]
name = "diem-sdk"
version = "0.0.2"
authors = ["Diem Association <opensource@diem.com>"]
description = "The Official Diem SDK"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[features]
default = ["client"]
client = ["diem-client"]

[dependencies]
bcs = "0.1"
rand_core = "0.6.2"
serde = { version = "1.0.124", features = ["derive"] }

diem-crypto = { path = "../crypto/crypto", version = "0.0.2" }
diem-types = { path = "../types", version = "0.0.2"}
move-core-types = { path = "../language/move-core/types", version = "0.0.2" }
diem-transaction-builder = { path = "./transaction-builder", version = "0.0.2" }

# Optional Dependencies
diem-client = { path = "./client", version = "0.0.2", optional = true }

[dev-dependencies]
diem-workspace-hack = { path = "../common/workspace-hack" }
