[package]
name = "state-sync"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem state synchronizer (state sync)"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = "0.1.2"
fail = "0.4.0"
futures = "0.3.12"
itertools = { version = "0.10.0", default-features = false }
once_cell = "1.7.2"
proptest = { version = "1.0.0", optional = true }
rand = "0.8.3"
serde = { version = "1.0.123", default-features = false }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"

channel = { path = "../common/channel" }
diem-config = { path = "../config" }
diem-crypto = { path = "../crypto/crypto" }
diem-infallible = { path = "../common/infallible" }
diem-logger = { path = "../common/logger" }
diem-mempool = { path = "../mempool"}
diem-metrics = { path = "../common/metrics" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-temppath = { path = "../common/temppath" }
diem-types = { path = "../types" }
diem-vm = { path = "../language/diem-vm" }
diem-workspace-hack = { path = "../common/workspace-hack" }
diemdb = { path = "../storage/diemdb", optional = true }
executor = { path = "../execution/executor" }
executor-test-helpers = { path = "../execution/executor-test-helpers", optional = true }
executor-types = { path = "../execution/executor-types" }
memsocket = { path = "../network/memsocket", optional = true }
netcore = { path = "../network/netcore" }
network = { path = "../network" }
storage-interface = { path = "../storage/storage-interface" }
subscription-service = { path = "../common/subscription-service" }
vm-genesis = { path = "../language/tools/vm-genesis", optional = true }

[dev-dependencies]
bytes = "1.0.1"
proptest = "1.0.0"

channel = { path = "../common/channel" }
compiled-stdlib = { path = "../language/diem-framework/compiled" }
diem-crypto = { path = "../crypto/crypto" }
diem-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
diem-mempool = { path = "../mempool", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers" }
diemdb = { path = "../storage/diemdb" }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
memsocket = { path = "../network/memsocket" }
network = { path = "../network", features = ["fuzzing", "testing"] }
network-builder = { path  = "../network/builder" }
storage-service = { path = "../storage/storage-service" }
subscription-service = { path = "../common/subscription-service" }
transaction-builder = { path = "../language/transaction-builder" }
diem-time-service = { path = "../common/time-service", features = ["testing"] }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["vm-genesis", "proptest", "executor-test-helpers", "diem-config/fuzzing", "diem-mempool/fuzzing", "diem-types/fuzzing", "diem-proptest-helpers", "memsocket/fuzzing"]
