[package]
name = "state-synchronizer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra state synchronizer"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3.0"
serde = { version = "1.0.105", default-features = false }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
once_cell = "1.3.1"
rand = "0.6.5"
tokio = { version = "0.2.13", features = ["full"] }
prometheus = { version = "0.8.0", default-features = false }

channel = { path = "../common/channel", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-mempool = { path = "../mempool", version = "0.1.0"}
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
storage-client = { path = "../storage/storage-client", version = "0.1.0" }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }

[dev-dependencies]
bytes = "0.5.4"

config-builder = { path = "../config/config-builder", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
parity-multiaddr = "0.7.2"
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }
channel = { path = "../common/channel", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-mempool/fuzzing", "libra-types/fuzzing"]
