[package]
name = "state-synchronizer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem state synchronizer"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
fail = "0.4.0"
futures = "0.3.8"
serde = { version = "1.0.117", default-features = false }
once_cell = "1.4.1"
rand = "0.7.3"
tokio = { version = "0.2.22", features = ["full"] }
itertools = { version = "0.9.0", default-features = false }
proptest = { version = "0.10.1", optional = true }

channel = { path = "../common/channel", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
diem-config = { path = "../config", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diemdb = { path = "../storage/diemdb", version = "0.1.0", optional = true }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-mempool = { path = "../mempool", version = "0.1.0"}
diem-metrics = { path = "../common/metrics", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0", optional = true }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }
diem-types = { path = "../types", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
memsocket = { path = "../network/memsocket", version = "0.1.0", optional = true }
netcore = { path = "../network/netcore", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }
diem-vm = { path = "../language/diem-vm", version = "0.1.0" }
bcs = "0.1.2"
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0", optional = true }

[dev-dependencies]
bytes = "0.5.6"
proptest = "0.10.1"

channel = { path = "../common/channel", version = "0.1.0" }
compiled-stdlib = { path = "../language/stdlib/compiled",  version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-test-helpers = { path = "../execution/executor-test-helpers", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-genesis-tool = {path = "../config/management/genesis", version = "0.1.0", features = ["testing"] }
diem-mempool = { path = "../mempool", version = "0.1.0", features = ["fuzzing"] }
diem-network-address = { path = "../network/network-address", version = "0.1.0", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0" }
diem-temppath = { path = "../common/temppath", version = "0.1.0" }
diemdb = { path = "../storage/diemdb", version = "0.1.0" }
memsocket = { path = "../network/memsocket", version = "0.1.0" }
network = { path = "../network", version = "0.1.0", features = ["testing"] }
network-builder = {path  = "../network/builder", version = "0.1.0"}
storage-service = { path = "../storage/storage-service", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["vm-genesis", "proptest", "diem-network-address/fuzzing", "diem-config/fuzzing", "diem-mempool/fuzzing", "diem-types/fuzzing", "diem-proptest-helpers", "memsocket/fuzzing"]
