[package]
name = "state_synchronizer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.17", package = "futures-preview", features = ["compat"] }
grpcio = { version = "0.4.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rand = "0.6.5"
tokio = { version = "0.1.22", default-features = false }

config = { path = "../config" }
execution_proto = { path = "../execution/execution_proto" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
grpc_helpers = { path = "../common/grpc_helpers" }
logger = { path = "../common/logger" }
metrics = { path = "../common/metrics" }
network = { path = "../network" }
crypto = { path = "../crypto/crypto" }
proto_conv = { path = "../common/proto_conv" }
storage_client = { path = "../storage/storage_client" }
types = { path = "../types" }

[dependencies.prometheus]
version  = "0.4.2"
default-features = false
features = ["push"]

[dev-dependencies]
bytes = "0.4.12"

config_builder = { path = "../config/config_builder" }
crypto = { path = "../crypto/crypto", features = ["testing"]}
parity-multiaddr = "0.5.0"
types = { path = "../types", features = ["testing"] }
vm_genesis = { path = "../language/vm/vm_genesis" }
