[package]
name = "libra_state_synchronizer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "0.4.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rand = "0.6.5"
tokio = { version = "0.1.22", default-features = false }

libra_config = { path = "../config" }
libra_executor = { path = "../execution/executor" }
failure = { path = "../common/failure_ext", package = "libra_failure_ext" }
libra_logger = { path = "../common/logger" }
libra_metrics = { path = "../common/metrics" }
libra_network = { path = "../network" }
libra_proto_conv = { path = "../common/proto_conv" }
libra_storage_client = { path = "../storage/storage_client" }
libra_types = { path = "../types" }
libra_vm_runtime = { path = "../language/vm/vm_runtime" }

[dependencies.prometheus]
version  = "0.7.0"
default-features = false

[dev-dependencies]
bytes = "0.4.12"

libra_config_builder = { path = "../config/config_builder" }
libra_crypto = { path = "../crypto/crypto", features = ["testing"]}
parity-multiaddr = "0.5.0"
libra_types = { path = "../types", features = ["testing"] }
libra_vm_genesis = { path = "../language/vm/vm_genesis" }
libra_transaction_builder = { path = "../language/transaction_builder" }
libra_channel = { path = "../common/channel" }
