[package]
name = "state_synchronizer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rand = "0.6.5"
tokio = { version = "0.1.22", default-features = false }
prometheus = { version = "0.7.0", default-features = false }

config = { path = "../config" }
executor = { path = "../execution/executor" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
logger = { path = "../common/logger" }
metrics = { path = "../common/metrics" }
network = { path = "../network" }
storage_client = { path = "../storage/storage_client" }
types = { path = "../types" }
vm_runtime = { path = "../language/vm/vm_runtime" }

[dev-dependencies]
bytes = "0.4.12"

config-builder = { path = "../config/config-builder" }
crypto = { path = "../crypto/crypto", features = ["testing"]}
parity-multiaddr = "0.5.0"
types = { path = "../types", features = ["testing"] }
vm_genesis = { path = "../language/vm/vm_genesis" }
transaction_builder = { path = "../language/transaction_builder" }
channel = { path = "../common/channel" }
