[package]
name = "testsuite"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra testsuite"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dev-dependencies]
num = "0.2.0"
num-traits = "0.2"
rust_decimal = "1.4.1"
statistical = "1"
workspace-builder = { path = "../common/workspace-builder", version = "0.1.0" }
debug-interface = { path = "../common/debug-interface", version = "0.1.0" }

# In order to limit the potential waiting time for binaries to be built while
# running tests all binaries which are being tested under this testsuite
# should have their crates listed as dev-dependencies.
cli = { path = "../client/cli", version = "0.1.0", features = ["fuzzing"] }
generate-keypair = { path = "../config/generate-keypair", version = "0.1.0" }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-swarm = { path = "../libra-swarm", version = "0.1.0" }
libra-json-rpc = { path = "../json-rpc", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }
