[package]
name = "testsuite"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra testsuite"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

# In order to limit the potential waiting time for binaries to be built while
# running tests all binaries which are being tested under this testsuite
# should have their crates listed as dev-dependencies.
[dev-dependencies]
anyhow = "1.0.31"
num = "0.3.0"
num-traits = "0.2.12"
rust_decimal = "1.7.0"
statistical = "1.0.0"

cli = { path = "cli", version = "0.1.0", features = ["fuzzing"]  }
debug-interface = { path = "../common/debug-interface", version = "0.1.0" }
generate-key = { path = "../config/generate-key", version = "0.1.0" }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-genesis-tool = {path = "../config/management/genesis", version = "0.1.0", features = ["testing"] }
libra-operational-tool = {path = "../config/management/operational", version = "0.1.0", features = ["testing"] }
libra-global-constants = { path = "../config/global-constants", version = "0.1.0" }
libra-json-rpc = { path = "../json-rpc", version = "0.1.0" }
libra-key-manager = { path = "../secure/key-manager", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-management = { path = "../config/management", version = "0.1.0", features = ["testing"] }
libra-network-address = { path = "../network/network-address", version = "0.1.0" }
libra-secure-json-rpc = { path = "../secure/json-rpc", version = "0.1.0" }
libra-secure-time = { path = "../secure/time", version = "0.1.0" }
libra-secure-storage = { path = "../secure/storage", version = "0.1.0", features = ["testing"] }
libra-swarm = { path = "libra-swarm", version = "0.1.0"}
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-trace = { path = "../common/trace", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }
workspace-builder = { path = "../common/workspace-builder", version = "0.1.0" }

[features]
fuzzing = ["cli/fuzzing", "libra-crypto/fuzzing"]
