[package]
name = "trybuild"
version = "1.0.38"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Test harness for ui tests of compiler diagnostics"
repository = "https://github.com/dtolnay/trybuild"
documentation = "https://docs.rs/trybuild"
exclude = ["screenshots/*"]
readme = "README.md"

[features]
# Experimental: highlight the diff between the expected and actual compiler
# output. Currently unix-only. If you test this out, please provide any feedback
# in https://github.com/dtolnay/trybuild/issues/41.
diff = ["dissimilar"]

[dependencies]
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
lazy_static = "1.3"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.0.4"
toml = "0.5.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
