[package]
name = "diem-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
hex = "0.4.2"
itertools = { version = "0.10.0", default-features = false }
once_cell = "1.4.1"
mirai-annotations = "1.10.1"
proptest = { version = "0.10.1", default-features = false, optional = true }
proptest-derive = { version = "0.2.0", default-features = false, optional = true }
rand = "0.8.2"
serde = { version = "1.0.123", default-features = false }
serde_json = "1.0.61"
serde_bytes = "0.11.5"
thiserror = "1.0.23"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

bcs = "0.1.2"
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0" }

[dev-dependencies]
regex = "1.4.3"
proptest = "0.10.1"
proptest-derive = "0.2.0"
serde_json = "1.0.61"

diem-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }
diem-network-address = { path = "../network/network-address", version = "0.1.0", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0", features = ["fuzzing"]  }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "diem-proptest-helpers", "diem-crypto/fuzzing", "diem-network-address/fuzzing", "move-core-types/fuzzing"]
