[package]
name = "vm-validator"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra vm validator"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
libra-config = { path = "../config", version = "0.1.0" }
scratchpad = { path = "../storage/scratchpad", version = "0.1.0" }
libra-state-view = { path = "../storage/state-view", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
rand = "0.7.3"

executor = { path = "../execution/executor", version = "0.1.0" }
executor-test-helpers = { path = "../execution/executor-test-helpers", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0", features = ["fuzzing"] }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }
libradb = { path = "../storage/libradb", version = "0.1.0", features = ["fuzzing"] }
storage-service = { path = "../storage/storage-service", version = "0.1.0" }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0" }
[features]
default = []
fuzzing = ["libra-types/fuzzing", "libra-crypto/fuzzing", "libradb/fuzzing"]
