[package]
name = "vm-validator"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem vm validator"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.39"
fail = "0.4.0"
scratchpad = { path = "../storage/scratchpad" }
diem-state-view = { path = "../storage/state-view" }
storage-interface = { path = "../storage/storage-interface" }
diem-types = { path = "../types" }
diem-vm = { path = "../language/diem-vm" }
diem-workspace-hack = { path = "../common/workspace-hack" }

[dev-dependencies]
rand = "0.8.3"

executor = { path = "../execution/executor" }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
diem-crypto = { path = "../crypto/crypto", features = ["fuzzing"] }
diem-temppath = { path = "../common/temppath" }
diem-types = { path = "../types", features = ["fuzzing"] }
diem-vm = { path = "../language/diem-vm" }
diemdb = { path = "../storage/diemdb", features = ["fuzzing"] }
storage-service = { path = "../storage/storage-service" }
transaction-builder = { path = "../language/transaction-builder" }
vm-genesis = { path = "../language/tools/vm-genesis" }
move-core-types = { path = "../language/move-core/types" }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["diem-types/fuzzing", "diem-crypto/fuzzing", "diemdb/fuzzing"]
